# EL2008-TUBES-KELAS-PMC

./: .gitignore  Build Instruction.txt  Build Instructions.txt  CMakeLists.txt  README.md  Struktur Dokumen Laporan.txt  main.c  tempCodeRunnerFile.dart  template.doc  test.txt
data/: DataPMC20232024.xlsx
doc/: LOG.md
doc/Drawio/: .$Data.drawio.bkp  Data.drawio
functions/GTK/: gtk-ui.c
resources/: style.css
src/: main.c
src/functions/: node.c  test_testcase.c  testcase.c
src/functions/GTK/: activate.c  analytics_tab.c  finance_tab.c  load_css.c  medical_checkup_tab.c  medical_records_tab.c  patient_data_tab.c
src/functions/standalone/: dataOperator.c  dataOperator.h  loader.c  loader.h  logger.c  logger.h  saveData.c  saveData.h  search.c  search.h  tempCodeRunnerFile.c  test.c  test.h  testcase  testcase.c
src/functions/struct/: dataStructure.c  dataStructure.h
src/header/: node.c  struct.h
